--- a/tutorial-part-four/package.json
+++ b/tutorial-part-four/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^2.13.21",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-typography": "^2.3.2",
+    "gatsby-source-filesystem": "^2.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-typography": "^0.16.19",
